rm files not needed
