# public/openapi.yaml
@@ -6,10 +6,68 @@ info:
 servers:
   - url: https://whatisvercelanyway.vercel.app
 paths:
-  /todos.json:
+  /api/todos:
     get:
       operationId: getTodos
-      summary: Get the list of todos
+      summary: Get the list of todos or a specific todo
+      parameters:
+        - name: id
+          in: query
+          required: false
+          schema:
+            type: number
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getTodosResponse'
+    post:
+      operationId: addTodo
+      summary: Add a todo
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/addTodoRequest'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getTodosResponse'
+    delete:
+      operationId: deleteTodo
+      summary: Delete a todo
+      parameters:
+        - name: id
+          in: query
+          required: true
+          schema:
+            type: number
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getTodosResponse'
+    put:
+      operationId: updateTodo
+      summary: Update a todo
+      parameters:
+        - name: id
+          in: query
+          required: true
+          schema:
+            type: number
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/updateTodoRequest'
       responses:
         "200":
           description: OK
@@ -25,5 +83,19 @@ components:
         todos:
           type: array
           items:
-            type: object
-          description: The list of todos.
+            $ref: '#/components/schemas/todo'
+    addTodoRequest:
+      $ref: '#/components/schemas/todo'
+    updateTodoRequest:
+      $ref: '#/components/schemas/todo'
+    todo:
+      type: object
+      description: A todo
+      properties:
+        id:
+          type: number
+          description: required when deleting or updating a todo
+        msg:
+          type: string
+        priority:
+          type: string
